[package]
name = "libsql_replication"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Replication protocol for libSQL"

[dependencies]
tonic = { version = "0.11", default-features = false, features = ["codegen", "prost"] }
prost = "0.12"
libsql-sys = { workspace = true, default-features = false, features = ["wal", "rusqlite", "api"] }
rusqlite = { workspace = true }
parking_lot = "0.12.5"
bytes = { version = "1.11.0", features = ["serde"] } 
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0.69"
tracing = "0.1.44"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
async-trait = "0.1.89"
uuid = { version = "1.19.0", features = ["v4"] }
tokio-util = "0.7.18"
async-stream = "0.3.6"
zerocopy = { version = "0.7.35", features = ["derive"] }
aes = "0.8.4"
cbc = "0.1.2"
 
[dev-dependencies]
arbitrary = { version = "1.4.2", features = ["derive_arbitrary"] }
bincode = "1.3.3"
tempfile = "3.24.0"
prost-build = "0.12"
tonic-build = "0.11"

[features]
encryption = ["libsql-sys/encryption"]
