[package]
name = "libsql-server"
version = "0.24.33"
edition = "2021"
default-run = "sqld"
repository = "https://github.com/tursodatabase/libsql"

[[bin]]
name = "sqld"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-lock = "2.8.0"
async-stream = "0.3.6"
async-tempfile = "0.4.0"
async-trait = "0.1.89"
axum = { version = "0.6.20", features = ["headers"] }
axum-extra = { version = "0.7", features = ["json-lines", "query"] }
base64 = "0.21.7"
bincode = "1.3.3"
bottomless = { version = "0", path = "../bottomless", features = ["libsql_linked_statically"] }
bytes = { version = "1.11.0", features = ["serde"] }
bytesize = { version = "1.3.3", features = ["serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = [ "derive", "env", "string" ] }
console-subscriber = { git = "https://github.com/tokio-rs/console.git", rev = "5a80b98", optional = true }
crc = "3.4.0"
enclose = "1.2"
fallible-iterator = "0.3.0"
futures = "0.3.31"
futures-core = "0.3"
hmac = "0.12"
hyper = { workspace = true, features = ["http2"] }
hyper-rustls = { git = "https://github.com/rustls/hyper-rustls.git", rev = "163b3f5", features = ["http2"] }
hyper-tungstenite = "0.11"
itertools = "0.10.5"
jsonwebtoken = "9"
libsql = { path = "../libsql/", optional = true }
libsql_replication = { path = "../libsql-replication" }
metrics = "0.21.1"
metrics-util = "0.15"
metrics-exporter-prometheus = "0.12.2"
# mimalloc = { version = "0.1.36", default-features = false }
moka = { version = "0.12.12", features = ["future", "sync"] }
nix = { version = "0.26.4", features = ["fs"] }
once_cell = "1.21.3"
parking_lot = "0.12.5"
pem = "3.0.6"
pin-project-lite = "0.2.16"
priority-queue = "1.4"
prost = "0.12"
rand = "0.8"
regex = "1.12.2"
reqwest = { version = "0.11.27", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { workspace = true }
rustls = "0.21.12"
rustls-pemfile = "1.0.4"
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.149", features = ["preserve_order"] }
md-5 = "0.10"
sha2 = "0.10"
sha256 = "1.6.0"
libsql-sys = { path = "../libsql-sys", features = ["wal", "sqlean-extensions" ], default-features = false }
libsql-hrana = { path = "../libsql-hrana" }
sqlite3-parser = { package = "libsql-sqlite3-parser", path = "../vendored/sqlite3-parser", default-features = false, features = [ "YYNOERRORRECOVERY" ] }
tempfile = "3.24.0"
thiserror = "1.0.69"
tokio = { version = "=1.49", features = ["rt-multi-thread", "net", "io-std", "io-util", "time", "macros", "sync", "fs", "signal"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = "0.20"
tokio-util = { version = "0.7.18", features = ["io", "io-util"] }
tonic = { version = "0.11", features = ["tls"] }
tonic-web = "0.11"
tower = { workspace = true, features = ["make"] }
tower-http = { version = "0.3.5", features = ["compression-full", "cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
http-body = "0.4"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde", "v7"] }
aes = { version = "0.8.4", optional = true }
cbc = { version = "0.1.2", optional = true }
zerocopy = { workspace = true }
hashbrown = { version = "0.14.5", features = ["serde"] }
hdrhistogram = "7.5.4"
crossbeam = "0.8.4"
async-recursion = "1"
mimalloc = "0.1.48"
rheaper = { git = "https://github.com/MarinPostma/rheaper.git", tag = "v0.2.0", default-features = false, features = ["allocator"] }
tar = "0.4.44"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-smithy-runtime = "1.9.8"
dialoguer = { version = "0.11.0", features = ["history"] }
indicatif = "0.17.11"

[dev-dependencies]
arbitrary = { version = "1.4.2", features = ["derive_arbitrary"] }
env_logger = "0.10"
hyper = { workspace = true, features = ["client"] }
insta = { version = "1.46.1", features = ["json"] }
libsql = { path = "../libsql/"}
libsql-client = { version = "0.6.7", default-features = false, features = ["reqwest_backend"] }
proptest = "1.9.0"
rand = "0.8.5"
tempfile = "3.24.0"
turmoil = "0.6.6"
url = "2.5"
metrics-util = "0.15"
s3s = "0.8.1"
s3s-fs = "0.8.1"
ring = { version = "0.17.14", features = ["std"] }
tonic-build = "0.11"
prost-build = "0.12"

[build-dependencies]
vergen = { version = "8", features = ["build", "git", "gitcl"] }

[features]
default = []
debug-tools = ["console-subscriber", "rusqlite/trace", "tokio/tracing"]
wasm-udfs = ["rusqlite/libsql-wasm-experimental"]
unix-excl-vfs = ["libsql-sys/unix-excl-vfs"]
encryption = ["dep:aes", "dep:cbc", "libsql-sys/encryption", "libsql_replication/encryption", "bottomless/encryption"]
test-encryption = ["libsql/encryption"]
