[package]
name = "sql-experimental"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
doc = false

[build-dependencies]
cbindgen = "0.24.5"

[dependencies]
bytes = "1.11.0"
lazy_static = "1.5.0"
tokio = { version = "1.49.0", features = [ "rt-multi-thread" ] }
hyper-rustls = { version = "0.25", features = ["webpki-roots"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
http = "1.4.0"
anyhow = "1.0.100"
libsql = { path = "../../libsql", features = ["encryption"] }


# The produced binaries are too large for mobiles
# When compiling for iOS or Android, you should turn on symbol stripping, lto and cut debug symbols
# [profile.release]
# debug = false # Exclude debug symbols
# strip = "symbols" # Exclude the rest of the symbols
# # opt-level = "z" # Did not use this, but it equals C++'s optimize for size (O3?)
# lto = true # Link time optimization, not sure what this does but it helps reduce the size
